<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/blue_p">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:id="@+id/imgItem"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            android:src="@drawable/tortilla"
            app:layout_collapseParallaxMultiplier="0.7"
            app:riv_corner_radius_bottom_right="@dimen/_20sdp"
            app:riv_corner_radius_bottom_left="@dimen/_20sdp"/>
    
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="start"
                android:background="@drawable/btn_bg"
                android:id="@+id/imgToolbarBtnBack"
                android:contentDescription="@string/description_back"
                android:src="@drawable/ic_back"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="@color/blue_p">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name"
                    android:textAlignment="center"
                    android:id="@+id/tvCategory"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"
                    android:padding="@dimen/_10sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/ic_time"
                            android:src="@drawable/ic_time"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTime"
                            android:text="@string/minutes"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@color/hint"
                            android:maxEms="10"
                            android:maxLines="2"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_10sdp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/cals"
                            android:src="@drawable/ic_time"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/cal"
                            android:text="@string/cals"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@color/hint"
                            android:maxEms="10"
                            android:maxLines="2"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_10sdp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/people"
                            android:src="@drawable/ic_time"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvServing"
                            android:text="@string/people"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="@color/hint"
                            android:maxEms="10"
                            android:maxLines="2"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_10sdp"/>
                    </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_10sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="@color/blue_p">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvIngredients"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:padding="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_10sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="@color/lightblue">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvInstructions"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/hint"
                    android:textStyle="bold"
                    android:padding="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnYoutube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_bg3"
            android:gravity="center"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/website"
            android:textColor="@color/white" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>